# EdgeSpeak

./: .gitignore  CONSTITUTION.md  Dockerfile.build  README.md  README_ZH.md  TODO.md  pyproject.toml  tts-tool.spec
.github/workflows/: release.yml
docs/: dialog-design.md
src/tts_tool/: __main__.py  audio_player.py  config.py  i18n.py  job.py  subtitle.py  text_parser.py  tts_engine.py  tts_provider.py  voice_list.py
src/tts_tool/dialog/: merger.py  models.py  parser.py  presets.py  templates.py
src/tts_tool/gui/: api.py  app.py  index.html
src/tts_tool/locales/: en.json  zh.json
src/tts_tool/providers/: edge_provider.py  sapi_provider.py
tests/: test_audio_player.py  test_cancel.py  test_config.py  test_config_property.py  test_config_stress.py  test_dialog_api.py  test_dialog_merger.py  test_dialog_models.py  test_dialog_parser.py  test_dialog_presets.py  test_i18n.py  test_i18n_property.py  test_job.py  test_subtitle.py  test_subtitle_property.py  test_text_parser.py  test_text_parser_property.py  test_text_parser_stress.py  test_tts_engine.py  test_tts_engine_property.py  test_voice_list.py  test_voice_list_stress.py
